--- a/PollingStation/PollingStationApp/wwwroot/index.html
+++ b/PollingStation/PollingStationApp/wwwroot/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <system.web>
+        <globalization uiCulture="ro-RO" culture="ro-RO" />
+    </system.web>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PollingStationApp</title>
@@ -10,6 +13,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="PollingStationApp.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
